@@ -11,6 +11,7 @@
 </DL>
 <DL>
 <DT><I>STANDARD OPTIONS</I></DT>
+<DT><I>Not themed</I></DT>
 <DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-anchor">-anchor</A></TR>
@@ -43,6 +44,35 @@
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-pady">-pady</A></TR>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-relief">-relief</A></TR>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-takefocus">-takefocus</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-text">-text</A></TR>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-textvariable">-textvariable</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-wraplength">-wraplength</A></TR>
+</TR>
+</TABLE></DD>
+<DT><I>Themed</I></DT>
+<DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-anchor">-anchor</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-background">-background or -bg</A></TD>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-cursor">-cursor</A></TD></TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-font">-font</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-foreground">-foreground or -fg</A></TD>
+</TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-image">-image</A></TR>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-justify">-justify</A></TD>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-relief">-relief</A></TD>
 </TR>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-takefocus">-takefocus</A></TR>
@@ -237,7 +267,8 @@ Specifies a desired height for the label.
 If an image or bitmap is being displayed in the label then the value is in
 screen units, for text it is in lines of text.
 If this option isn't specified, the label's desired height is computed
-from the size of the image or bitmap or text being displayed in it.
+from the size of the image or bitmap or text being displayed in it.<BR>
+Option not available for <I>themed</I> widgets.
 </DD>
 </DL>
 <DL><DT><A NAME="-helptext"><B>-helptext</B></A></DT>
